EEN-141: Refactoring Sign up forms to be used on event registration

--- a/drupal/modules/custom/een_common/templates/sign-up/complete.html.twig
+++ b/drupal/modules/custom/een_common/templates/sign-up/complete.html.twig
@@ -16,13 +16,13 @@
             <p class="no-margin sh-bold">Opportunity ID:</p>
         </div>
         <div class="column-two-thirds">
-            <div><p class="no-margin">{{ form.profile_id }}</p></div>
+            <div><p class="no-margin">{{ form.id }}</p></div>
         </div>
         <div class="column-one-third">
             <p class="sh-bold">Opportunity title:</p>
         </div>
         <div class="column-two-thirds">
-            <div><p>{{ form.profile_title }}</p></div>
+            <div><p>{{ form.title }}</p></div>
         </div>
         <div class="column-one-third">
             <p> </p>
