--- a/drupal/themes/custom/een/scss/een.scss
+++ b/drupal/themes/custom/een/scss/een.scss
@@ -1751,6 +1751,7 @@ form[data-drupal-selector="opportunity-search-explore-form"] {
         }
     }
 }
+
 .skype-btn {
     //min-width:146px;
     display:inline-block;
@@ -1764,6 +1765,7 @@ form[data-drupal-selector="opportunity-search-explore-form"] {
         font-size:inherit!important;
         margin:7px 0 0 0;
         padding:2px 30px;
+        float:left; 
         a {
             img {
                 margin:0!important;
