--- a/drupal/modules/custom/een_common/templates/contact-form.html.twig
+++ b/drupal/modules/custom/een_common/templates/contact-form.html.twig
@@ -21,6 +21,7 @@
             <p>Click on the buttons below to open up a Skype chat or video call.</p>
             <script type="text/javascript" src="https://secure.skypeassets.com/i/scom/js/skype-uri.js"></script>
             <div id="SkypeButton_Call_mrsmanders_1" class="skype-btn"></div>
+            <div id="SkypeButton_Call_mrsmanders_2" class="skype-btn"></div>
         </div>
     </div>
 </div>
@@ -28,14 +29,14 @@
 
 <script type="text/javascript">
     Skype.ui(
-    { "name": "call", "element": "SkypeButton_Call_mrsmanders_1", "participants": ["EENUK"], "imageSize": 32 }
+    { "name": "call", "element": "SkypeButton_Call_mrsmanders_1", "participants": ["mrsmanders"], "imageSize": 32 }
 
     );
 </script>
 
 <script type="text/javascript">
 Skype.ui(
-{ "name": "chat", "element": "SkypeButton_Call_mrsmanders_1", "participants": ["EEN-UK"], "imageSize": 32 }
+{ "name": "chat", "element": "SkypeButton_Call_mrsmanders_2", "participants": ["mrsmanders"], "imageSize": 32 }
 
 );
 </script>
