EEN-141: Register to event + code clean

--- a/drupal/modules/custom/een_common/templates/sign-up/review-event.html.twig
+++ b/drupal/modules/custom/een_common/templates/sign-up/review-event.html.twig
@@ -23,11 +23,12 @@
         </div>
         <div class="column-two-thirds with-cta">
             <div>
-                <p>{{ form.allergies }}</p>
+                <p>{{ form.dietary }}</p>
                 <form class="hidden">
-                    <div class="js-form-item form-item js-form-type-textearea form-item-allergies js-form-item-allergies">
+                    <div class="js-form-item form-item js-form-type-textearea form-item-dietary js-form-item-dietary">
                         <span class="error-message"></span>
-                        <textarea class="form-control form-textarea required" name="allergies" rows="5" cols="60">{{ form.allergies }}</textarea>
+                        <textarea class="form-control form-textarea required" name="dietary" rows="5"
+                                  cols="60">{{ form.dietary }}</textarea>
                     </div>
                 </form>
             </div>
