--- a/drupal/modules/custom/events/templates/events-details.html.twig
+++ b/drupal/modules/custom/events/templates/events-details.html.twig
@@ -96,7 +96,7 @@
                 {{ form.form_id }}
 
                 <div class="form-section">
-                    {{ form.allergies }}
+                    {{ form.dietary }}
                 </div>
                 <hr />
                 {{ form.actions }}
