Add latest 5 opportunities to sentence builder.

--- a/drupal/modules/custom/events/templates/events-search.html.twig
+++ b/drupal/modules/custom/events/templates/events-search.html.twig
@@ -1,6 +1,6 @@
 <div class="content-heading">
     <h1>{{ 'Events'|t }}</h1>
-    <h2 class="heading-large">{{ 'List of the upcomming events'|t }}</h2>
+    <h2 class="heading-large">{{ 'List of the upcoming events'|t }}</h2>
 </div>
 
 <div class="row">
