--- a/drupal/themes/custom/een/scss/een.scss
+++ b/drupal/themes/custom/een/scss/een.scss
@@ -76,9 +76,29 @@ a {
 .form-label, .form-label-bold {
     color:inherit;
 }
-
-
-
+.what-value {
+    display:inline-block;
+    margin-bottom:20px;
+}
+.q-styled {
+    width:20px;
+    height:20px;
+    text-align:center;
+    line-height:24px;
+    font-size:16px;
+    font-weight:bold;
+    display:inline-block;
+    border-radius:50%;
+    color:#fff;
+    margin-right:10px;
+    background:#006ba6;
+}
+.een-value {
+    display:none;
+    border-left:solid 3px #ddd;
+    margin-left:7px;
+    padding-left:10px;
+}
 %borderGradElement {
 
     content: " ";
