--- a/drupal/modules/custom/opportunities/templates/opportunities-details.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-details.html.twig
@@ -169,9 +169,9 @@
             {% if token == false %}
                 <div class="verify-email">
                     {{ form_email }}
-                    <p>To apply for this opportunity we need to check you're a real person.</p>
-
-                    <p>Enter your email above, check your inbox and click on the link we've sent you to continue this application.</p>
+                    <p>Sorry, we just need to check you're a real person. 
+                        Enter your email above, check your inbox and click on the link we've 
+                    sent you to continue your submission.</p>
                 </div>
                 <div class="transp">
             {% endif %}
