--- a/drupal/modules/custom/opportunities/templates/opportunities-sentence-builder.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-sentence-builder.html.twig
@@ -36,7 +36,7 @@
 </div>
 
 
-<div class="results-list">
+<div class="results-list latest">
     <div class="grid-row">
         <div class="column-one-third">
             <h3 class="heading-medium single-header-one-col">Latest opportunities</h3>
