--- a/drupal/modules/custom/een_common/templates/sign-up/step2.html.twig
+++ b/drupal/modules/custom/een_common/templates/sign-up/step2.html.twig
@@ -2,8 +2,8 @@
     <div class="column-full">
         <div class="form-heading header-secondary">
             {% if type == 'opportunities' %}
-                <h1 class="heading-large" tabindex="0">Thank you for applying for this project</h1>
-                <p>To complete your project application please create an account</p>
+                <h1 class="heading-large" tabindex="0">Thank you for your interest.</h1>
+                <p>To complete your submission please tell us a little<br />about you and your business.</p>
             {% else %}
                 <h1 class="heading-large" tabindex="0">Thank you for registering for this event</h1>
                 <p>To complete your registration please create an account</p>
